--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
 
     <properties>
-        <revision>3.3.1</revision>
+        <revision>3.3.2.RELEASE</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
         <gpg.skip>true</gpg.skip>
