--- a/easyexcel-test/pom.xml
+++ b/easyexcel-test/pom.xml
@@ -44,6 +44,11 @@
         <!-- logback -->
         <dependency>
             <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
             <version>1.7.36</version>
         </dependency>
