--- a/pom.xml
+++ b/pom.xml
@@ -87,10 +87,11 @@
                 <version>${revision}</version>
             </dependency>
 
+            <!-- Using the latest version of support simultaneously requires global use of the shade plugin, which is prone to errors, so changing to support will be lower than the overall -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel-support</artifactId>
-                <version>${revision}</version>
+                <version>3.3.2</version>
             </dependency>
 
             <dependency>
@@ -102,6 +103,11 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
                 <version>5.2.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.32</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -310,31 +316,6 @@
                         <goals>
                             <goal>delombok</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <artifactSet>
-                                <includes>
-                                    <include>${project.groupId}:${project.artifactId}</include>
-                                </includes>
-                            </artifactSet>
-                            <relocations>
-                                <relocation>
-                                    <pattern>org.springframework</pattern>
-                                    <shadedPattern>com.alibaba.excel.support</shadedPattern>
-                                </relocation>
-                            </relocations>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
