升级新版本

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 8, 11, 17]
+        java: [ 8, 11, 17, 21]
         distribution: [ 'adopt' ]
       fail-fast: false
       max-parallel: 4
