--- a/easyexcel-test/pom.xml
+++ b/easyexcel-test/pom.xml
@@ -71,6 +71,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
                     <includes>
                         <include>/com/alibaba/easyexcel/test/core/**/*.java</include>
                     </includes>
