修改运行脚本

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,11 @@ jobs:
       - name: Chmod
         run:  chmod +x mvnw
       - name: Test with Maven
+        if: ${{ matrix.java == '8' }}
         run: ./mvnw test -B -Dmaven.test.skip=false
+      - name: Test with Maven
+        if: ${{ matrix.java != '8' }}
+        run: ./mvnw test -B -Dmaven.test.skip=false --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
       - name: Maven Build
         run: ./mvnw install -B -V
       - name: Java Doc
