--- a/easyexcel-support/pom.xml
+++ b/easyexcel-support/pom.xml
@@ -60,6 +60,7 @@
                                     <includes>
                                         <include>org/springframework/asm/**</include>
                                         <include>org/springframework/cglib/**</include>
+                                        <include>org/springframework/util/*</include>
                                     </includes>
                                 </filter>
                             </filters>
